--- a/views/dashboard/user.html
+++ b/views/dashboard/user.html
@@ -23,8 +23,8 @@
 		</div>
 	</div>
 	<div id="user-content" class="dash-content">
-		<div id="user-content-wrapper" infinite-scroll='loadMoar()' infinite-scroll-disabled='pauseAjx || doneAjx' infinite-scroll-distance='1' infinite-scroll-container="'#user-content'">
-			<div class="user-card cursor-pointer" ng-repeat="o in data track by $index" ng-click="editUser(o.ID)">
+		<div id="user-content-wrapper" masonry preserve-order infinite-scroll='loadMoar()' infinite-scroll-disabled='pauseAjx || doneAjx' infinite-scroll-distance='1' infinite-scroll-container="'#user-content'">
+			<div class="user-card cursor-pointer masonry-brick" ng-repeat="o in data track by $index" ng-click="editUser(o.ID)">
 				<div class="user-gender" ng-class="{ male: o.usr_gender == 'm', female: o.usr_gender == 'f' }"></div>
 				<div class="user-name">
 					<div class="dash-label">name</div>
