--- a/stylesheets/dashboard/_dashboard.scss
+++ b/stylesheets/dashboard/_dashboard.scss
@@ -22,7 +22,7 @@
 					.sidebar-menu-content {
 						width: $menu-size; height: $menu-size; margin: auto; background: $sidebar-clr; line-height: $menu-size; border-radius: 5px; z-index: 82; position:relative;
 						& > i { font-size: 17px; margin-left: $icon-margin; }
-						& > span { display: none; }
+						& > span { display: none; text-transform: lowercase; }
 
 						&.active { color: white; background: $menu-act-clr!important; }
 					}
