--- a/views/dashboard/dashboard.html
+++ b/views/dashboard/dashboard.html
@@ -18,7 +18,7 @@
 			<div id="dropdown-menu" ng-show="showUserMenu">
 				<div id="dropdown-username" class="cursor-default">Username</div>
 				<ul>
-					<li class="cursor-pointer"><i class="fa fa-sign-out" aria-hidden="true"></i> Sign out</li>
+					<li class="cursor-pointer"><i class="fa fa-sign-out" aria-hidden="true"></i> sign out</li>
 				</ul>
 			</div>
 		</div>
