--- a/stylesheets/_mixins.scss
+++ b/stylesheets/_mixins.scss
@@ -16,6 +16,10 @@
 	hyphens: auto; -ms-hyphens: auto; -moz-hyphens: auto;
 }
 
+@mixin nopadding {
+	padding: 0px!important;
+}
+
 @mixin noselect {
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
