--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -13,14 +13,19 @@ input { -webkit-appearance: none; -moz-appearance: none; box-shadow: none; outli
 input[type=number] { -moz-appearance:textfield; }
 input::-webkit-inner-spin-button, input::-webkit-outer-spin-button { -webkit-appearance: none; margin: 0; }
 *:focus, select { outline: none!important; }
+.row { width: 100%; @include clearfix(); }
 .bold { font-weight: 700 !important; }
+.full-height { height: 100%; }
 .uppercase { text-transform: uppercase !important; }
 .capitalize { text-transform: capitalize!important; }
 .nopadding { padding: 0 !important; margin: 0 !important; }
 .float-left { float: left!important; }
 .float-right { float: right!important; }
+.align-left { text-align: left!important; }
+.align-right { text-align: right!important; }
 .force-middle { margin: auto!important; float: none!important; display: block!important; }
 .half-width { width: 50%; }
+.ellipsis { @include ellipsis(); }
 .cursor-default { cursor: default; @include noselect(); }
 .cursor-pointer { cursor: pointer; @include noselect(); }
 .noselect {
