--- a/views/dashboard/statistic.html
+++ b/views/dashboard/statistic.html
@@ -158,7 +158,7 @@
 				<div id="widget-institution" class="statistic-card">
 					<div class="sideview-title cursor-default">users' institution</div>
 					<div class="sideview-content cursor-default">
-
+						<nvd3 options="pieoptions" data="data.institution"></nvd3>
 					</div>
 				</div>
 			</div>
@@ -168,17 +168,14 @@
 				<div id="widget-education" class="statistic-card">
 					<div class="sideview-title cursor-default">users' education</div>
 					<div class="sideview-content cursor-default">
-
+						<nvd3 options="pieoptions" data="data.education"></nvd3>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="col-6">
 			<div class="col-12" force-height="{{ 1 / 4 }}">
-
-			</div>
-			<div class="col-12" force-height="{{ 1 / 4 }}">
-				<div class="col-6" force-height="{{ 1 / 2 }}">
+				<div class="col-6 full-height">
 					<div class="statistic-container">
 						<div id="widget-hardestquestion" class="statistic-card">
 							<div class="sideview-title cursor-default">hardest question</div>
@@ -188,12 +185,44 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-6" force-height="{{ 1 / 2 }}">
+				<div class="col-6 full-height">
 					<div class="statistic-container">
 						<div id="widget-easiestquestion" class="statistic-card">
 							<div class="sideview-title cursor-default">easiest question</div>
 							<div class="sideview-content cursor-default">
 								{{ data.hardestquestion }}
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-12" force-height="{{ 1 / 4 }}">
+				<div class="col-4 full-height">
+					<div class="statistic-container">
+						<div id="widget-hardestcategory" class="statistic-card">
+							<div class="sideview-title cursor-default">hardest category</div>
+							<div class="sideview-content cursor-default">
+								{{ data.hardestcategory }}
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-4 full-height">
+					<div class="statistic-container">
+						<div id="widget-averagetime" class="statistic-card">
+							<div class="sideview-title cursor-default">answer average time</div>
+							<div class="sideview-content cursor-default">
+								<span>{{ data.averagetime || 0 }}</span> second
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-4 full-height">
+					<div class="statistic-container">
+						<div id="widget-easiestcategory" class="statistic-card">
+							<div class="sideview-title cursor-default">easiest category</div>
+							<div class="sideview-content cursor-default">
+								{{ data.easiestcategory }}
 							</div>
 						</div>
 					</div>
@@ -207,7 +236,7 @@
 				<div id="widget-designation" class="statistic-card">
 					<div class="sideview-title cursor-default">users' designation</div>
 					<div class="sideview-content cursor-default">
-
+						<nvd3 options="pieoptions" data="data.designation"></nvd3>
 					</div>
 				</div>
 			</div>
@@ -217,42 +246,13 @@
 				<div id="widget-age" class="statistic-card">
 					<div class="sideview-title cursor-default">users' age distribution</div>
 					<div class="sideview-content cursor-default">
-
+						<nvd3 options="baroptions" data="data.age"></nvd3>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="col-3">
-			<div class="col-12" force-height="{{ 1 / 3 }}">
-				<div class="statistic-container">
-					<div id="widget-hardestcategory" class="statistic-card">
-						<div class="sideview-title cursor-default">hardest category</div>
-						<div class="sideview-content cursor-default">
-							{{ data.hardestcategory }}
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-12" force-height="{{ 1 / 3 }}">
-				<div class="statistic-container">
-					<div id="widget-easiestcategory" class="statistic-card">
-						<div class="sideview-title cursor-default">easiest category</div>
-						<div class="sideview-content cursor-default">
-							{{ data.easiestcategory }}
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-12" force-height="{{ 1 / 3 }}">
-				<div class="statistic-container">
-					<div id="widget-averagetime" class="statistic-card">
-						<div class="sideview-title cursor-default">answer average time</div>
-						<div class="sideview-content cursor-default">
-							<span>{{ data.averagetime || 0 }}</span> second
-						</div>
-					</div>
-				</div>
-			</div>
+
 		</div>
 	</div>
 </div>
